Text ist auswählbar & Links können im Browser geöffnet werden - getEditorPane() -> in eigene Klasse SelectableText umgewandelt - Klasse SelectableText erstellt (Text lässt sich markieren, Web-Links innerhalb des Editors können im Browser geöffnet werden) - toHTML() -> formatInputToHTML() in StringUtils verschoben - StringUtils Javadoc generiert + Methode wrapA hinzugefügt (wrapA: HTML Link Element)